3-clashing-gateways/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hello-k8s
    sidecar.istio.io/inject: "true"
  name: hello-k8s
  namespace: clash
spec:
  containers:
  - env:
    - name: RESPONSE
      value: Hello native k8s workload
    image: docker.io/openshift/hello-openshift
    name: hello-k8s
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
