3-clashing-gateways/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hello-k8s
  name: hello-k8s
  namespace: clash
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello-k8s
