3-clashing-gateways/ocproute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 600s
  name: route-hello-k8s
  namespace: istio-system
spec:
  host: hello-k8s.apps.rlehmann-ocp-4-12.serverless.devcluster.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
